<resources>
    <string name="app_name">EasyDrive 1.0</string>
    <string name="btnEnterLogin">Entrar</string>
    <string name="txtLoginPass">Contraseña</string>
    <string name="txtLoginEmail">"Correo "</string>
    <string name="txtLoginTittle">Inicio de sesión</string>
    <string name="btnRegister">Registrarse</string>
    <string name="txtRegisterTittle">Registro</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_viajes">Viajes</string>
    <string name="menu_gastos">Gastos</string>
    <string name="menu_partes">Partes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RecordarAcceso">Recordar Credenciales</string>
    <string name="TituloGasto">Nombre</string>
    <string name="TituloNuevoViaje">Insertar nuevo viaje</string>
    <string name="PaisNuevjoVIaje">Pais de destino</string>
    <string name="EmpresaDestino">Empresa de destino</string>
    <string name="DireccionDestino">Dirección de destino</string>
    <string name="FechaSalidaNuevoViaje">Fecha de salida</string>
    <string name="FechaLlegadaNuevoViaje">Fecha de llegada</string>
    <string name="CrearNuevoViaje">Crear</string>
    <string name="CancelarNuevoViaje">Cancelar</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="Nombre">Nombre</string>
    <string name="Camion">Camión</string>
    <string name="NuevoViaje">Insertar nuevo gasto</string>
    <string name="NombreGasto">Nombre del gasto</string>
    <string name="Combustible">Combustible</string>
    <string name="Total">Total</string>
    <string name="Peajes">Peajes</string>
    <string name="Comida">Comida</string>
    <string name="OtrosGastos">Otros Gastos</string>
    <string name="Calcular">Calcular</string>
    <string name="NuevoParte">Insertar nuevo parte</string>
    <string name="insertarNuevoParte">Nombre del parte</string>
    <string name="ElegirFoto">Elegir foto</string>
    <string name="SubirFoto">Subir foto</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Descripcion">Descripción</string>
    <string name="MensajeNoPartes">Que suerte!! No tienes ningún parte.</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Dni">DNI 00000000A</string>
    <string name="FechaNacimiento">Fecha de nacimiento</string>
    <string name="Matricula">Matrícula 0000AAA</string>
    <string name="PaisDestino">País de destino</string>
    <string name="ElementoBorrado">Se ha borrado el elemento.</string>
    <string name="mensajeSalirApp">¿Está usted seguro de que desea salir?</string>
    <string name="titSalirApp">Salir</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="acercaDe">Acerda de</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Contacto">Contacto</string>
    <string name="MensajeAcercaDe">EasyDrive Drive es una aplicación desarrollada por el alumno Houssam Khellou para el proyecto integrado del FP Desarrollo de aplicaciones multiplataforma del instituto I.E.S Murgi</string>
    <string name="CorreoHoussam">mouhaumimon@gmail.com</string>
</resources>
