<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viajes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_viajes" />
        <item
            android:id="@+id/nav_gastos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gastos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_partes" />
    </group>
    <group >
        <item
            android:id="@+id/btn_cerrarSesion"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="Cerrar" />
    </group>
</menu>
