<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="LoginViewModel"
            type="com.example.easydrive10.login.LoginViewModel" />
        <import type="android.util.Patterns"/>
        <import type="android.text.TextUtils"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/txtLoginTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/txtLoginTittle"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="378dp"
        android:layout_height="0dp"
        android:layout_marginBottom="165dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginTittle">

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtLoginEmail"
            android:text="@={LoginViewModel.mutableCorreo}"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtLoginPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/txtLoginPass"
            android:text="@={LoginViewModel.mutableContrasenia}"
            android:inputType="textWebPassword" />

        <Button
            android:id="@+id/btnEnterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> LoginViewModel.comprobarUsuario()}"
            android:enabled="@{!TextUtils.isEmpty(LoginViewModel.mutableCorreo)&amp;&amp;Patterns.EMAIL_ADDRESS.matcher(LoginViewModel.mutableCorreo).matches()}"
            android:text="@string/btnEnterLogin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>